--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@rails/webpacker": "5.4.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^5.1.1",
+    "google-maps-react": "^2.0.6",
+    "highcharts": "^9.2.2",
+    "highcharts-react-official": "^3.0.0",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
