--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "turbolinks": "^5.2.0",
