--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@rails/webpacker": "5.4.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bootstrap": "^5.1.1",
+    "date-fns": "^2.25.0",
     "google-maps-react": "^2.0.6",
     "highcharts": "^9.2.2",
     "highcharts-react-official": "^3.0.0",
@@ -17,6 +18,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
+    "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "turbolinks": "^5.2.0",
