--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-bootstrap": "^1.6.4",
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^11.4.2",
+    "react-fetch-progressbar": "^1.0.0",
     "react-router-dom": "^5.3.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
