--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
+    "react-csv": "^2.0.3",
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.4.2",
