--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "highcharts": "^9.2.2",
     "highcharts-react-official": "^3.0.0",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
