--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PRODUCTION_DB_NAME: datason
-PRODUCTION_DB_USERNAME: postgre
+PRODUCTION_DB_USERNAME: postgres
 CLOUD_SQL_CONNECTION_NAME: propane-flag-332315:europe-west1:direction-budget
 GOOGLE_PROJECT_ID: propane-flag-332315
