--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "private": true,
   "dependencies": {
     "@babel/preset-react": "^7.14.5",
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.0",
+    "@mui/material": "^5.2.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
