--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.4.2",
-    "react-router-dom": "^6.3.0",
+    "react-router-dom": "6",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
