--- a/package.json
+++ b/package.json
@@ -2,34 +2,35 @@
   "name": "datason",
   "private": true,
   "dependencies": {
-    "@babel/preset-react": "^7.14.5",
-    "@emotion/react": "^11.6.0",
-    "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.2.0",
-    "@mui/material": "^5.2.0",
-    "@rails/actioncable": "^6.0.0",
-    "@rails/activestorage": "^6.0.0",
-    "@rails/ujs": "^6.0.0",
+    "@babel/preset-react": "^7.18.6",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.9.2",
+    "@rails/actioncable": "^7.0.3",
+    "@rails/activestorage": "^7.0.3",
+    "@rails/ujs": "^7.0.3",
     "@rails/webpacker": "5.4.3",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "date-fns": "^2.25.0",
+    "date-fns": "^2.29.1",
     "google-maps-react": "^2.0.6",
     "highcharts": "^10.2.0",
     "highcharts-react-official": "^3.1.0",
-    "moment": "^2.29.1",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-csv": "^2.0.3",
-    "react-datepicker": "^4.2.1",
-    "react-dom": "^17.0.2",
-    "react-dropzone": "^11.4.2",
+    "mini-css-extract-plugin": "^2.6.1",
+    "moment": "^2.29.4",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-csv": "^2.2.2",
+    "react-datepicker": "^4.8.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.2",
     "react-router-dom": "6",
     "turbolinks": "^5.2.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^4.10.0"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^3"
+    "webpack": "^5.74.0",
+    "webpack-dev-server": "^4"
   }
 }
