change google map react

--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "@rails/activestorage": "^7.0.3",
     "@rails/ujs": "^7.0.3",
     "@rails/webpacker": "5.4.3",
+    "@react-google-maps/api": "^2.12.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "date-fns": "^2.29.1",
-    "google-maps-react": "^2.0.6",
     "highcharts": "^10.2.0",
     "highcharts-react-official": "^3.1.0",
     "moment": "^2.29.4",
