add legende click filter

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PRODUCTION_DB_NAME: datason
+PRODUCTION_DB_NAME: simp3
 PRODUCTION_DB_USERNAME: postgres
-CLOUD_SQL_CONNECTION_NAME: propane-flag-332315:europe-west1:direction-budget
-GOOGLE_PROJECT_ID: propane-flag-332315
+CLOUD_SQL_CONNECTION_NAME: apps-354210:europe-west1:budgetlab
+GOOGLE_PROJECT_ID: apps-354210
 GMAPS_BROWSER_KEY: "AIzaSyCBEVHq2EbsHz4m37nb6nG-Fh-5PxK5o98"
